--- a/src/Components/SharedComponents/Navbar/Navbar.css
+++ b/src/Components/SharedComponents/Navbar/Navbar.css
@@ -1,18 +1,21 @@
-.navbar-default .navbar-toggle {
-    border-color: #ffffff;
-  }
-  .navbar-default .navbar-toggle:hover,
-  .navbar-default .navbar-toggle:focus {
-    background-color: none;
-  }
-  .navbar-toggler{
-    background-color: none;
+.navbar .navbar-brand img {
+    width: 182px;
+    height: 118px;
+}
+
+.custom-btn {
+    background-color: #0FBED8;
+    padding: 10px 20px;
+    color: #ffffff;
     border: none;
-  }
-  .navbar-toggler:hover,
-  .navbar-toggler:focus {
-      border: none;
-  }
-  .navbar-toggler-icon{
-      border: none;
-  }
+    border-radius: 20px 0px 20px 0px;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 767px) {
+    .navbar .navbar-brand img {
+        width: 162px;
+        height: 108px;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {}
