--- a/src/Components/Home/Service/Service.css
+++ b/src/Components/Home/Service/Service.css
@@ -46,6 +46,7 @@
     }
     .service-area{
         width: 100%;
+        height: 100%;
     }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {}
