--- a/src/Components/SharedComponents/Navbar/Navbar.css
+++ b/src/Components/SharedComponents/Navbar/Navbar.css
@@ -1,15 +1,9 @@
-.navbar .navbar-brand img {
+/* .navbar .navbar-brand img {
     width: 182px;
     height: 118px;
 }
 
-.custom-btn {
-    background-color: #0FBED8;
-    padding: 10px 20px;
-    color: #ffffff;
-    border: none;
-    border-radius: 20px 0px 20px 0px;
-}
+
 
 @media only screen and (min-width: 320px) and (max-width: 767px) {
     .navbar .navbar-brand img {
@@ -18,4 +12,142 @@
     }
 }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {} */
+
+.header{
+    width: 100%;
+}
+.logo img{
+    margin-top: 30px;
+    width: 172px;
+    height: 118px;
+}
+.custom-btn {
+    background-color: #0FBED8;
+    padding: 10px 20px;
+    color: #ffffff;
+    border: none;
+    border-radius: 20px 0px 20px 0px;
+}
+
+.menu{
+    float: right
+}
+.menu ul{
+    list-style: none;
+    margin-top: 34px;
+    
+}
+.menu ul li{
+    display: inline-block;
+}
+.menu ul li .menu-item{
+    color: #000;
+    padding: 0px 15px;
+    font-size: 16px;
+    font-weight: normal;
+}
+.active{
+    color: gray;
+    font-weight: bold;
+    padding-right: 15px;
+}
+
+.menu ul li .menu-item:hover{
+    color: gray;
+    cursor: pointer;
+}
+.show-menu-btn:hover, .hide-menu-btn:hover{
+    color: #000;
+    
+}
+#chk{
+    visibility: hidden;
+    position: absolute;
+}
+.show-menu-btn{
+    float: right;
+
+}
+.show-menu-btn{
+    margin-top: 30px;
+    font-size: 36px;
+    color: #000;
+
+}
+.show-menu-btn, .hide-menu-btn{
+    display: none;
+}
+@media screen and (max-width:991px){
+    .show-menu-btn, .hide-menu-btn{
+        display: block;
+    }
+    .menu{
+        z-index: 1;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        top:0;
+        right:-100%;
+        text-align: center;
+        padding: 80px 0px;
+        line-height: normal;
+        overflow: auto;
+        transition-duration: 1s;
+    }
+    .show-menu-btn{
+        position: absolute;
+        font-size: 30px;
+        bottom: 35px;
+        right: 40px;
+        padding: 10px;
+        transition-duration: 1s;
+        display: inline-block;
+        cursor: pointer;
+    }
+    .active{
+        padding-right: 0px;
+    }
+    .menu ul li{
+        display: block;
+        padding: 15px 0px;
+    }
+
+     .menu ul li .menu-item{
+        display: inline-block;
+        color: #000;
+    }
+    .hide-menu-btn{
+        color: #333;
+        font-size: 30px;
+        position: absolute;
+        top: 40px;
+        right: 50px;  
+        padding: 5px; 
+        cursor: pointer;
+
+    }
+
+    #chk:checked ~ .menu{
+        right: 0;
+    }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 767px) {
+    .logo img {
+        width: 95px;
+        height: 65px;
+    }
+    .show-menu-btn{
+        position: absolute;
+        font-size: 30px;
+        top: -100px;
+        right: 40px;
+        padding: 10px;
+        transition-duration: 1s;
+        display: inline-block;
+        cursor: pointer;
+    }
+}
 @media only screen and (min-width: 768px) and (max-width: 991px) {}
