--- a/src/Components/Home/RunningArea/RunningArea.css
+++ b/src/Components/Home/RunningArea/RunningArea.css
@@ -27,6 +27,7 @@
 @media only screen and (min-width: 320px) and (max-width: 767px) {
     .running-area{
         padding: 30px 0px;
+        height: 800px;
     }
     .running-area-content{
         margin: 30px 0px;
