--- a/src/Components/SharedComponents/Navbar/Navbar.css
+++ b/src/Components/SharedComponents/Navbar/Navbar.css
@@ -1,29 +1,15 @@
-/* .navbar .navbar-brand img {
-    width: 182px;
-    height: 118px;
-}
-
-
-
-@media only screen and (min-width: 320px) and (max-width: 767px) {
-    .navbar .navbar-brand img {
-        width: 162px;
-        height: 108px;
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {} */
-
-.header{
+.header {
     width: 100%;
 }
-.logo img{
+
+.logo img {
     margin-top: 30px;
     width: 172px;
     height: 118px;
 }
+
 .custom-btn {
-    background-image: linear-gradient(to right, #0EBBDC 0%, #0EBBDC  51%, #1DDBB6 100%);
+    background-image: linear-gradient(to right, #0EBBDC 0%, #0EBBDC 51%, #1DDBB6 100%);
     transition: all 1s;
     padding: 10px 20px;
     color: #ffffff;
@@ -31,78 +17,86 @@
     border-radius: 20px 0px 20px 0px;
     font-weight: bold;
 }
-.custom-btn:hover{
+
+.custom-btn:hover {
     border-radius: 0px 20px 0px 20px;
     color: #ffffff;
 }
 
-.menu{
-    float: right
+.menu {
+    float: right;
 }
-.menu ul{
+
+.menu ul {
     list-style: none;
     margin-top: 34px;
-    
 }
-.menu ul li{
+
+.menu ul li {
     display: inline-block;
 }
-.menu ul li .menu-item{
+
+.menu ul li .menu-item {
+    font-family: 'Montserrat', sans-serif;
     color: #000;
     padding: 0px 15px;
     font-size: 16px;
     font-weight: normal;
 }
-.active{
+
+.active {
     color: gray;
     font-weight: bold;
     padding-right: 15px;
 }
 
-.menu ul li .menu-item:hover{
+.menu ul li .menu-item:hover {
     color: gray;
     cursor: pointer;
 }
-.show-menu-btn:hover, .hide-menu-btn:hover{
+
+.show-menu-btn:hover, .hide-menu-btn:hover {
     color: #000;
-    
 }
-#chk{
+
+#chk {
     visibility: hidden;
     position: absolute;
 }
-.show-menu-btn{
-    float: right;
 
+.show-menu-btn {
+    float: right;
 }
-.show-menu-btn{
+
+.show-menu-btn {
     margin-top: 30px;
     font-size: 36px;
     color: #000;
-
 }
-.show-menu-btn, .hide-menu-btn{
+
+.show-menu-btn, .hide-menu-btn {
     display: none;
 }
-@media screen and (max-width:991px){
-    .show-menu-btn, .hide-menu-btn{
+
+@media screen and (max-width:991px) {
+    .show-menu-btn, .hide-menu-btn {
         display: block;
     }
-    .menu{
+    .menu {
         z-index: 1;
         position: fixed;
         width: 100%;
         height: 100%;
         background-color: #fff;
-        top:0;
-        right:-100%;
+        top: 0;
+        right: -100%;
         text-align: center;
         padding: 80px 0px;
         line-height: normal;
         overflow: auto;
         transition-duration: 1s;
     }
-    .show-menu-btn{
+    .show-menu-btn {
         position: absolute;
         font-size: 30px;
         bottom: 35px;
@@ -112,30 +106,27 @@
         display: inline-block;
         cursor: pointer;
     }
-    .active{
-        padding-right: 0px;
+    .active {
+        padding: 0px;
     }
-    .menu ul li{
+    .menu ul li {
         display: block;
         padding: 15px 0px;
     }
-
-     .menu ul li .menu-item{
+    .menu ul li .menu-item {
         display: inline-block;
         color: #000;
     }
-    .hide-menu-btn{
+    .hide-menu-btn {
         color: #333;
         font-size: 30px;
         position: absolute;
         top: 40px;
-        right: 50px;  
-        padding: 5px; 
+        right: 50px;
+        padding: 5px;
         cursor: pointer;
-
     }
-
-    #chk:checked ~ .menu{
+    #chk:checked~.menu {
         right: 0;
     }
 }
@@ -145,7 +136,7 @@
         width: 95px;
         height: 65px;
     }
-    .show-menu-btn{
+    .show-menu-btn {
         position: absolute;
         font-size: 30px;
         top: -100px;
@@ -156,4 +147,5 @@
         cursor: pointer;
     }
 }
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {}
